--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -194,7 +194,9 @@
               = link_to "Lightspeed POS", "https://posintegration.bikeindex.org/admin/organizations/#{@organization.id}"
 
             - if current_user.developer? && @organization.manual_pos_kind.present?
-              %small.em.less-strong manual POS kind set
+              %small
+                %em.less-strong manual POS kind set:
+                = @organization.manual_pos_kind
 .row.mt-4
   .col-md-6
     %p
