--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -100,11 +100,8 @@
                       %td
                         - address = @bike.registration_address
                         - if @bike.valid_registration_address_present?
-                          %br
-                          &nbsp;&nbsp;&nbsp;
                           = address["address"]
                           %br
-                          &nbsp;&nbsp;&nbsp;
                           = [address['city'], address['state']].reject(&:blank?).join(", ")
                           = address['zipcode']
                         - else
@@ -115,11 +112,10 @@
                             %br
                           %span.text-warning
                             %small invalid address
-
                   - else
                     %tr
                       %td
-                        = "#{(bike_attr || reg_field).humanize}:"
+                        = "#{(bike_attr || reg_field).humanize}"
                       %td
                         = @bike.send(bike_attr)
 
