--- a/app/views/admin/organizations/_form.html.haml
+++ b/app/views/admin/organizations/_form.html.haml
@@ -94,7 +94,7 @@
       - Organization.pos_kinds.each do |pos_kind|
         .form-check.form-check-inline.small
           = f.radio_button "manual_pos_kind", pos_kind, class: "form-check-input"
-          = f.label "manual_pos_kind_#{pos_kind}", pos_kind.humanize, class: "form-check-label"
+          = f.label "manual_pos_kind_#{pos_kind}", pos_kind.humanize.gsub("pos", "").strip, class: "form-check-label"
       .mb-4
 
 .row
