--- a/app/views/organized/manages/schedule.html.haml
+++ b/app/views/organized/manages/schedule.html.haml
@@ -12,3 +12,6 @@
           %a.nav-link{ href: schedule_organization_manage_path(organization_id: current_organization.to_param, organization_location_id: location.id) }
             = location.name
 
+= form_for @organization, { url: organization_manage_path(id: @organization.id, organization_id: @organization.to_param), action: 'update', html: { class: 'organized-form' } } do |f|
+
+  dddd
