Send those emails

--- a/app/assets/stylesheets/revised/emails/email_body.scss
+++ b/app/assets/stylesheets/revised/emails/email_body.scss
@@ -53,6 +53,10 @@ h1 {
   font-weight: 200;
 }
 
+.uncap {
+  text-transform: none !important;
+}
+
 hr {
   display: block;
   margin: (2 * $vertical-height) 0;
