--- a/app/views/organized_mailer/parking_notification.text.haml
+++ b/app/views/organized_mailer/parking_notification.text.haml
@@ -1,11 +1,17 @@
-Your #{@bike.type} #{@parking_notification.appears_abandoned? ? "" : "is "}#{@parking_notification.kind_humanized}!
+= @parking_notification.title
+
+
+- if @parking_notification.repeat_record?
+  This is your #{@parking_notification.notification_number.ordinalize} notification!
+
 
 This is for your #{@bike.title_string}.
 
+
 It is located at: #{@parking_notification.address}
 
-This was sent to you by: #{@parking_notification.user.display_name}
 
----
+\---
 
-= @parking_notification.body
+
+= @parking_notification.message
