--- a/app/views/organized/parking_notifications/show.html.haml
+++ b/app/views/organized/parking_notifications/show.html.haml
@@ -46,12 +46,12 @@
                   #{@parking_notification.accuracy} accuracy
 
         %tr
-          %td= t(".repeat")
+          %td= t(".notification_number")
           %td
             - if @parking_notification.initial_record?
-              %span.less-strong Initial notification
+              %span.less-strong First notification
             - else
-              \ ##{@parking_notification.repeat_number}
+              \ ##{@parking_notification.notification_number}
               %em.small.less-strong.ml-2
                 first notification on
                 %a.convertTime{ href: organization_parking_notification_path(@parking_notification.initial_record_id, organization_id: current_organization.to_param) }
