--- a/app/views/organized/bikes/new.html.haml
+++ b/app/views/organized/bikes/new.html.haml
@@ -1,4 +1,4 @@
-- if @kind == "abandoned"
+- if @unregistered_parking_notification
   - iframe_url = new_iframe_organization_bikes_path(organization_id: current_organization)
 - else
   - iframe_url = embed_extended_organization_url(current_organization.slug)
