--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -46,18 +46,25 @@
           %li
             = active_link t(".recoveries"), recoveries_organization_bikes_path(current_organization.to_param), class: "menu-item secondary-item"
 
-        %li.divider-below
-          = active_link t(".add_a_bike"), new_organization_bike_path(current_organization.to_param), class: "menu-item"
+        - divider_below_add_bike = current_organization.show_bulk_import? || current_organization.lightspeed_pos? || current_organization.enabled?("parking_notifications")
+        - new_bike_with_parking_notification = controller_name == "bikes" && action_name == "new" && @unregistered_parking_notification
+        - new_bike_active = "bikes" && action_name == "new" && !new_bike_with_parking_notification
+        %li{ class: (divider_below_add_bike ? "divider-below" : "") }
+          = link_to t(".add_a_bike"), new_organization_bike_path(current_organization.to_param), class: "menu-item #{new_bike_active ? 'active' : ''}"
 
         - if current_organization.show_bulk_import?
           %li
             - bulk_link_name = current_organization.ascend_pos? ? t(".ascend_imports") : t(".bulk_imports")
             = active_link bulk_link_name, organization_bulk_imports_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
         - if current_organization.lightspeed_pos?
-          = active_link t(".lightspeed_integration_panel"), lightspeed_interface_path(organization_id: current_organization&.id), class: "menu-item"
+          %li
+            = active_link t(".lightspeed_integration_panel"), lightspeed_interface_path(organization_id: current_organization&.id), class: "menu-item"
         - if current_organization.enabled?("parking_notifications")
           %li
             = active_link t(".parking_notifications"), organization_parking_notifications_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
+          %li
+            = link_to t(".parking_notification_unregistered"), new_organization_bike_path(current_organization.to_param, parking_notification: true), class: "menu-item #{new_bike_with_parking_notification ? 'active' : ''} secondary-item"
+
         %li.divider-above
           - if current_organization.enabled?("bike_stickers")
             = active_link t(".registration_stickers"), organization_stickers_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
