--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -55,7 +55,7 @@
                 - if passive_organization.enabled?("show_partial_registrations")
                   %li
                     = active_link t(".incomplete_registrations"), incompletes_organization_bikes_path(passive_organization.to_param), class: "nav-link secondary-item"
-                - if current_organization.show_multi_serial?
+                - if passive_organization.show_multi_serial?
                   %li
                     = active_link t(".multi_serial_search"), multi_serial_search_organization_bikes_path(passive_organization.to_param), class: "nav-link secondary-item"
                 - if passive_organization.enabled?("show_recoveries") # I don't want to show a grayed link for this
